[package]
name = "play2play"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
ed25519-dalek = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
libp2p = { version = "0.50", features = ["mdns", "kad", "noise", "dns", "macros", "tcp", "async-std", "websocket", "mplex", "yamux"] }